2005-03-23  Larry Jones  <lawrence.jones@ugs.com>

	* getdate.c: Remove absolute paths from #line directives.

2005-03-04  Jim Hyslop  <jhyslop@ieee.org>

	* xtime.h: added include guards to fix compile errors on IRIX 5.3
	(Patch from Georg Schwarz <georg.scwarz@freenet.de>.)

2005-02-08  Derek Price  <derek@ximbiot.com>

	* fncase.c (OSX_filename_classes): Mac OSX doesn't need \ mapped to /.
	* system.h (FOLD_FN_CASE): Clarify comment.

2005-01-31  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Update copyright notices.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* regex.c: Back out my change from 2004-04-07 as possibly suppressing
	useful warnings.

2004-10-05  Mark D. Baushke  <mdb@cvshome.org>

	* regex.c (re_comp): Cast gettext return value to char * to
	avoid warning in !ENABLE_NLS case. Patch imported from GNULIB.
	(Problem report from Martin Neitzel <neitzel@sco.gaertner.de>.)

2004-05-28  Derek Price  <derek@ximbiot.com>

	* xsize.h: New file from GNULIB.
	* Makefile.am (libcvs_a_SOURCES): Add xsize.h.

2004-05-15  Derek Price  <derek@ximbiot.com>

	* libcvs.dsp: Header file list updated.
	* libcvs.dep: Regenerated for "libcvs.dsp" changes.
	* libcvs.mak: Regenerated for "libcvs.dsp" changes.
	(Patch from Conrad Pino <conrad@pino.com>.)

2004-05-13  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Changed for "libcvs.dsp" changes.
	* libcvs.dsp: Added for "../cvsnt.dsw" changes.
	* libcvs.dep: Added for "libcvs.dsp" addition.
	* libcvs.mak: Added for "libcvs.dsp" addition.
	(Patch from Conrad Pino <conrad@pino.com>.)

2004-04-20  Derek Price  <derek@ximbiot.com>

	* system.h: Correct comments.

2004-04-19  Derek Price  <derek@ximbiot.com>

	* system.h: Gratuitous reformatting.

2004-04-07  Derek Price  <derek@ximbiot.com>

	* regex.c: Revise "FREE_VAR" macro to eliminate C4090/C4022 warnings
	in Windows build with Visual C++ 6.0 compiler.
	(Original patch from Conrad T. Pino <Conrad@Pino.com>.)

2004-04-04  Derek Price  <derek@ximbiot.com>
